Rewrite runtime for Cardboard 26.2