@@ -1,6 +1,5 @@
 package com.slyph.clovergraves.storage;
 
-import com.artillexstudios.axapi.database.DatabaseConfig;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -16,23 +15,14 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-/**
- * Exercises {@link SqlGraveStorage} against a real {@code jdbc:h2:mem:} database via the
- * package-private connection-supplier constructor - this bypasses AxAPI's
- * {@code DatabaseType#config(DatabaseConfig)} (whose exact URL-building behavior per database
- * type isn't verified here) while still exercising every SQL statement this class issues.
- */
 class SqlGraveStorageTest {
     private String jdbcUrl;
     private SqlGraveStorage storage;
 
     @BeforeEach
     void setUp() {
-        jdbcUrl = "jdbc:h2:mem:axgraves-test-" + UUID.randomUUID() + ";DB_CLOSE_DELAY=-1";
-
-        DatabaseConfig config = new DatabaseConfig();
-        config.tablePrefix("axgraves_");
-
+        jdbcUrl = "jdbc:h2:mem:clovergraves-test-" + UUID.randomUUID() + ";DB_CLOSE_DELAY=-1";
+        JdbcConfig config = new JdbcConfig(JdbcConfig.Type.H2, jdbcUrl, "", "", "axgraves_");
         storage = new SqlGraveStorage(config, this::openConnection, true, 2, 30);
         storage.init();
     }
@@ -51,7 +41,7 @@ class SqlGraveStorageTest {
     }
 
     private GraveRecord newRecord(UUID owner) {
-        return new GraveRecord(-1, owner, "Steve", "world,0.0,64.0,0.0,0.0,0.0",
+        return new GraveRecord(-1, owner, "Steve", "world;0.0;64.0;0.0;0.0;0.0",
                 new byte[]{1, 2, 3}, 3465, 42, System.currentTimeMillis(), null, null);
     }
 
@@ -60,40 +50,34 @@ class SqlGraveStorageTest {
         UUID owner = UUID.randomUUID();
         long id = storage.save(newRecord(owner));
         assertTrue(id > 0);
-
         List<GraveRecord> all = storage.loadAll();
         assertEquals(1, all.size());
-        assertEquals(owner, all.get(0).owner());
-        assertEquals(42, all.get(0).storedXP());
+        assertEquals(owner, all.getFirst().owner());
+        assertEquals(42, all.getFirst().storedXP());
     }
 
     @Test
     void savingWithAnExistingIdUpdatesInPlace() {
         UUID owner = UUID.randomUUID();
         long id = storage.save(newRecord(owner));
-
-        GraveRecord updated = new GraveRecord(id, owner, "Steve", "world,1.0,65.0,1.0,0.0,0.0",
+        GraveRecord updated = new GraveRecord(id, owner, "Steve", "world;1.0;65.0;1.0;0.0;0.0",
                 new byte[]{9}, 3465, 99, System.currentTimeMillis(), null, null);
-        long sameId = storage.save(updated);
-
-        assertEquals(id, sameId);
+        assertEquals(id, storage.save(updated));
         List<GraveRecord> all = storage.loadAll();
-        assertEquals(1, all.size(), "update must not create a second row");
-        assertEquals(99, all.get(0).storedXP());
+        assertEquals(1, all.size());
+        assertEquals(99, all.getFirst().storedXP());
     }
 
     @Test
     void removingALiveGraveDeletesItAndArchivesToHistory() {
         UUID owner = UUID.randomUUID();
         long id = storage.save(newRecord(owner));
-
         storage.remove(id, EndReason.LOOTED);
-
         assertTrue(storage.loadAll().isEmpty());
         List<GraveRecord> history = storage.history(owner, 10);
         assertEquals(1, history.size());
-        assertEquals(EndReason.LOOTED, history.get(0).endReason());
-        assertFalse(history.get(0).restored());
+        assertEquals(EndReason.LOOTED, history.getFirst().endReason());
+        assertFalse(history.getFirst().restored());
     }
 
     @Test
@@ -101,12 +85,9 @@ class SqlGraveStorageTest {
         UUID owner = UUID.randomUUID();
         long id = storage.save(newRecord(owner));
         storage.remove(id, EndReason.EXPIRED);
-
-        long historyId = storage.history(owner, 1).get(0).id();
-
-        assertTrue(storage.claimForRestore(historyId), "first claim should succeed");
-        assertFalse(storage.claimForRestore(historyId), "second claim on the same entry must be rejected");
-
+        long historyId = storage.history(owner, 1).getFirst().id();
+        assertTrue(storage.claimForRestore(historyId));
+        assertFalse(storage.claimForRestore(historyId));
         Optional<GraveRecord> entry = storage.historyEntry(historyId);
         assertTrue(entry.isPresent());
         assertTrue(entry.get().restored());
@@ -115,25 +96,19 @@ class SqlGraveStorageTest {
     @Test
     void historyRetentionKeepsOnlyTheConfiguredCountPerPlayer() {
         UUID owner = UUID.randomUUID();
-
-        // keepPerPlayer is 2 (see setUp) - archive 4 graves for the same player
         for (int i = 0; i < 4; i++) {
             long id = storage.save(newRecord(owner));
             storage.remove(id, EndReason.EXPIRED);
         }
-
-        List<GraveRecord> history = storage.history(owner, 100);
-        assertEquals(2, history.size(), "pruning should have kept only the 2 most recent entries");
+        assertEquals(2, storage.history(owner, 100).size());
     }
 
     @Test
     void historyIsIsolatedPerOwner() {
         UUID ownerA = UUID.randomUUID();
         UUID ownerB = UUID.randomUUID();
-
         long idA = storage.save(newRecord(ownerA));
         storage.remove(idA, EndReason.EXPIRED);
-
         assertEquals(1, storage.history(ownerA, 10).size());
         assertTrue(storage.history(ownerB, 10).isEmpty());
     }
