@@ -1,6 +1,5 @@
 package com.slyph.clovergraves.storage;
 
-import com.artillexstudios.axapi.database.DatabaseConfig;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -20,7 +19,6 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class StorageMigrationTest {
-
     @TempDir
     File dataFolder;
 
@@ -30,8 +28,7 @@ class StorageMigrationTest {
     @BeforeEach
     void setUp() {
         jdbcUrl = "jdbc:h2:mem:migration-test-" + UUID.randomUUID() + ";DB_CLOSE_DELAY=-1";
-        DatabaseConfig config = new DatabaseConfig();
-        config.tablePrefix("axgraves_");
+        JdbcConfig config = new JdbcConfig(JdbcConfig.Type.H2, jdbcUrl, "", "", "axgraves_");
         target = new SqlGraveStorage(config, this::openConnection, true, 5, 14);
         target.init();
     }
@@ -55,7 +52,7 @@ class StorageMigrationTest {
                   {
                     "owner": "%s",
                     "ownerName": "Steve",
-                    "location": "world,0.0,64.0,0.0,0.0,0.0",
+                    "location": "world;0.0;64.0;0.0;0.0;0.0",
                     "items": "AAAAAA==",
                     "dataVersion": 3465,
                     "xp": 17,
@@ -70,22 +67,18 @@ class StorageMigrationTest {
     void migratesLegacyRecordsIntoAnEmptyDatabase() throws Exception {
         UUID owner = UUID.randomUUID();
         writeLegacyDataJson(owner);
-
         StorageMigration.migrateIfNeeded(dataFolder, target);
-
         List<GraveRecord> all = target.loadAll();
         assertEquals(1, all.size());
-        assertEquals(owner, all.get(0).owner());
-        assertEquals(17, all.get(0).storedXP());
+        assertEquals(owner, all.getFirst().owner());
+        assertEquals(17, all.getFirst().storedXP());
     }
 
     @Test
     void renamesTheSourceFileAfterASuccessfulMigration() throws Exception {
         writeLegacyDataJson(UUID.randomUUID());
-
         StorageMigration.migrateIfNeeded(dataFolder, target);
-
-        assertFalse(new File(dataFolder, "data.json").exists(), "data.json should be renamed away, not deleted or left in place");
+        assertFalse(new File(dataFolder, "data.json").exists());
         assertTrue(new File(dataFolder, "data.json.migrated").exists());
     }
 
@@ -98,15 +91,13 @@ class StorageMigrationTest {
     @Test
     void doesNotOverwriteAnAlreadyPopulatedDatabase() throws Exception {
         UUID existingOwner = UUID.randomUUID();
-        target.save(new GraveRecord(-1, existingOwner, "Alex", "world,0.0,64.0,0.0,0.0,0.0",
+        target.save(new GraveRecord(-1, existingOwner, "Alex", "world;0.0;64.0;0.0;0.0;0.0",
                 new byte[]{1}, 3465, 5, System.currentTimeMillis(), null, null));
-
         writeLegacyDataJson(UUID.randomUUID());
         StorageMigration.migrateIfNeeded(dataFolder, target);
-
         List<GraveRecord> all = target.loadAll();
-        assertEquals(1, all.size(), "the legacy file must not be imported on top of existing data");
-        assertEquals(existingOwner, all.get(0).owner());
-        assertTrue(new File(dataFolder, "data.json").exists(), "the untouched legacy file should be left in place for manual inspection");
+        assertEquals(1, all.size());
+        assertEquals(existingOwner, all.getFirst().owner());
+        assertTrue(new File(dataFolder, "data.json").exists());
     }
 }
